--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
 <br>
 <br>
-<br>
-<br>
-<br>
 <div style="display: flex;
             justify-content: center;
             align-items: end;
             ">
-  <h1>Mi aplicativo se llama {{title}}</h1>
+            <router-outlet></router-outlet>
+  <!-- <app-portafolio></app-portafolio> -->
+  <!-- <app-item></app-item> -->
+  <!-- <app-about></app-about> -->
 </div>
 
 <app-footer></app-footer>
