--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,25 +1,45 @@
 <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio rk-main">
-      <div class="au-xs-ta-center au-lg-ta-left">
-        <ul class="rk-menu rk-categories-menu">
-          <li class="active rk-menu__item"><a href="portfolio.html" class="rk-menu__link">Flex</a>
-          </li>
-          <li class="rk-menu__item"><a href="portfolio-alt.html" class="rk-menu__link">Switch</a>
-          </li>
-          <li class="rk-menu__item"><a href="portfolio-raw.html" class="rk-menu__link">Static</a>
-          </li>
-          <li class="rk-menu__item"><a href="portfolio-masonry.html" class="rk-menu__link">Masonry</a>
-          </li>
-        </ul>
-      </div>
-      <div class="rk-portfolio__items"><a href="portfolio-item.html" class="rk-item rk-item--flex item-1 rk-size-12 rk-tosize-6 rk-landscape ">
+
+  <div align="center" *ngIf="productoService.cargando">
+    <h2>Cargando...</h2>
+    <div class="loader loader--style1" title="0">
+      <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+      <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
+        s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634
+        c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"/>
+      <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+        C22.32,8.481,24.301,9.057,26.013,10.047z">
+        <animateTransform attributeType="xml"
+          attributeName="transform"
+          type="rotate"
+          from="0 20 20"
+          to="360 20 20"
+          dur="0.5s"
+          repeatCount="indefinite"/>
+        </path>
+      </svg>
+    </div>
+    <p>Espere por favor</p>
+    
+  </div>
+      <!-- 1 -->
+      <div *ngIf="!productoService.cargando"
+       class="rk-portfolio__items">
+        <a *ngFor="let producto of productoService.productos" routerLink="/item" class="rk-item rk-size-12 rk-tosize-6 ">
+          <img src="assets/productos/{{producto.url}}.jpg" alt="">
           <div class="item-meta">
-            <h2>Essential Stationery</h2>
-            <p>Branding</p>
-          </div></a><a routerLink="/item" class="rk-item rk-item--flex item-2 rk-size-6  rk-portrait ">
+            <h2>{{producto.titulo}}</h2>
+            <p>{{producto.categoria}}</p>
+          </div></a>
+
+          <!-- <a href="portfolio-item.html" class="rk-item rk-item--flex item-2 rk-size-6  rk-portrait ">
           <div class="item-meta">
             <h2>Pickled Tousled</h2>
             <p>Art Direction</p>
-          </div></a><a href="portfolio-item.html" class="rk-item rk-item--flex item-3 rk-size-6 rk-tosize-4 rk-portrait rk-tosquare">
+          </div></a>
+
+          <a href="portfolio-item.html" class="rk-item rk-item--flex item-3 rk-size-6 rk-tosize-4 rk-portrait rk-tosquare">
           <div class="item-meta">
             <h2>Waistcoat vegan</h2>
             <p>Graphic Design</p>
@@ -79,6 +99,6 @@
               <h2>Migas artisan</h2>
               <p>Photography</p>
             </div></a>
-        </div>
+        </div> -->
       </div>
     </section>
